--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Mail me</title>
+    <link rel="stylesheet" type="text/css" href="favicon.png">
 </head>
 <body>
-	<h1>My homepage</h1>
-	<a href="blog/">BLOG</a>
+    <section>
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="box">
+            <div class="square" style="--i:0;"></div>
+            <div class="square" style="--i:1;"></div>
+            <div class="square" style="--i:2;"></div>
+            <div class="square" style="--i:3;"></div>
+            <div class="square" style="--i:4;"></div>
+            <div class="container">
+            		<div class="head">
+               			<img src="favicon.png">
+               		</div>
+
+                   <ul class="contactWay">
+                   	<li><img src="images/wechat_logo.png" alt="wechat"></li>
+                   	<li> <a href="blog/"><img src="images/wechat_logo.png" alt="homepage"></a></li>
+                   	<li> <a href="blog/"><img src="images/github.png" alt="github"></a></li>
+                   	<li><img src="images/gmail.png" title="meng1037127772@gmail.com" alt="gmail"></li>
+                   </ul>
+               </div> 
+
+        </div>
+    </section>
 </body>
 </html>
