--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	               	
 	        	</div>
             <h2>孟虎</h2>
-            <p class="description">在线求职,手机号<em>13151634514</em></p>
+            <p class="description">前端工程师,手机号<em>13151634514</em></p>
                		
             <ul class="contactWay">
                 <li><a href="blog/"><img src="images/blog.png" alt="blog"><p>博客</p></a></li>
