--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,54 +10,97 @@
     <title>Mail me</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
-<body>
+
+<body onload="getDays()">
     <section>
         <div class="color"></div>
         <div class="color"></div>
         <div class="color"></div>
         <div class="box">
-        	<div class="container">
-	            <div class="head">
-	               	<img src="images/head.jpg" class="header">
-	               	<div class="status">
-	               		<div class="subtitle">
-	               		<p>本科</p>
-	               		<p>在职</p>
-	               		<p>苏州</p>
-	               		<p>27</p>
-	               		</div>
-	               	</div>
-	               	
-	        	</div>
-            <h2>孟虎</h2>
-            <p class="description">前端工程师,手机号<em>13151634514</em></p>
-               		
-            <ul class="contactWay">
-                <li><a href="blog/"><img src="images/blog.png" alt="blog"><p>博客</p></a></li>
-                <li class="wechat"><img src="images/wechat_logo.png" alt="homepage"><p>微信</p>
-                   <img src="images/wechat.png" alt="" id="wechatQR">
-                </li>
-                <li> <a href="https://github.com/menghu1994"><img src="images/github.png" alt="github"><p>github</p></a></li>
-                <li><a href="#" onclick="copy()"><img src="images/gmail.png" title="meng1037127772@gmail.com" alt="gmail"><p>Gmail</p>
-                	</li>
-             </ul>
-             <input type="text" id="gmailLink" value="meng1037127772@gmail.com" style="position: fixed;left:-2400px">
-         </div>
+            <div class="container">
+                <div class="head">
+                    <img src="images/head.jpg" class="header">
+                    <div class="status">
+                        <div class="subtitle">
+                            <p>本科</p>
+                            <p>在职</p>
+                            <p>苏州</p>
+                            <p>27</p>
+                        </div>
+                    </div>
+                </div>
+                <h2>孟虎</h2>
+                <p class="description">前端工程师,手机号<em>13151634514</em></p>
+
+                <ul class="contactWay">
+                    <li><a href="blog/"><img src="images/blog.png" alt="blog">
+                            <p>博客</p>
+                        </a></li>
+                    <li class="wechat"><img src="images/wechat_logo.png" alt="homepage">
+                        <p>微信</p>
+                        <img src="images/wechat.png" alt="" id="wechatQR">
+                    </li>
+                    <li> <a href="https://github.com/menghu1994"><img src="images/github.png" alt="github">
+                            <p>github</p>
+                        </a></li>
+                    <li><a href="#" onclick="copy()"><img src="images/gmail.png" title="meng1037127772@gmail.com"
+                                alt="gmail">
+                            <p>Gmail</p>
+                    </li>
+                </ul>
+                <input type="text" id="gmailLink" value="meng1037127772@gmail.com" style="position: fixed;left:-2400px">
+            </div>
             <div class="square" style="--i:0;"></div>
             <div class="square" style="--i:1;"></div>
             <div class="square" style="--i:2;"></div>
             <div class="square" style="--i:3;"></div>
             <div class="square" style="--i:4;"></div>
         </div>
-    </div> 
+        <div class="weddingDays">
+            <span>我们已经在一起:</span>
+            <span><span id="day">00</span>天</span>
+            <strong><span id="hour">00</span>时</strong>
+            <strong><span id="minute">00</span>分</strong>
+            <strong><span id="second">00</span>秒</strong>
+        </div>
     </section>
 
     <script>
-        function copy(){
+        function copy() {
             document.getElementById('gmailLink').select();
             document.execCommand("copy")
             alert('邮箱已复制')
-         }
+        }
+
+        function getDays() {
+            var day = document.getElementById('day');
+            var hour = document.getElementById('hour');
+            var minute = document.getElementById('minute');
+            var second = document.getElementById('second');
+            //计时器setInterval 
+            setInterval(function () {
+                //new Date()获取本地时间
+                var today = new Date();
+                //添加结束时间
+                var stopTime = new Date("2022/02/08 12:00:00");
+                //获取时间戳（毫秒）
+                var shenyu = today.getTime() - stopTime.getTime();
+                //转化为秒
+                var zhuanHS = shenyu / 1000;
+                shengyuD = parseInt(zhuanHS / (60 * 60 * 24));//转换为天 
+                //计算天的余数为小时
+                shengyuH = parseInt(zhuanHS / (60 * 60) % 24);
+                //计算小时的余数为分钟
+                shengyuM = parseInt(zhuanHS / (60) % 60);
+                //计算分钟的余数秒
+                shengyuS = parseInt(zhuanHS % 60)
+                day.innerHTML = shengyuD;
+                hour.innerHTML = shengyuH;
+                minute.innerHTML = shengyuM;
+                second.innerHTML = shengyuS;
+            }, 1000)
+        }
     </script>
 </body>
+
 </html>
